--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <div class="modal">
         <div class="modal-container">
             <h2>Registro de Key</h2>
+            <i class='bx bx-x' id="closemodal"></i>
 
             <label for="email">Email</label>
             <input type="email" name="email" id="email" required>
@@ -53,8 +54,8 @@
         </div>
         </div>
 
-        <input type="button" value="REGISTRAR">
-        <a href="#">Download antecipado</a>
+        <input type="button" value="REGISTRAR" class="btnregister">
+        <a href="#" class="download">Download antecipado</a>
     </main>
     <script src="index.js"></script>
 </body>
