--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
 
         <div class="modal">
         <div class="modal-container">
+            <div class="headermodal">
             <h2>Registro de Key</h2>
             <i class='bx bx-x' id="closemodal"></i>
+            </div>
 
             <label for="email">Email</label>
             <input type="email" name="email" id="email" required>
