--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <i class='bx bx-x' id="closemodal"></i>
             </div>
 
+            <form class="content">
             <label for="email">Email</label>
             <input type="email" name="email" id="email" required>
 
@@ -47,12 +48,13 @@
             <input type="text" name="User" id="User" required>
 
             <label for="pass">Senha</label>
-            <input type="password" name="password" id="pass" minlength="8" required>
+            <input type="password" name="password" id="pass" required minlength="8">
 
             <label for="confiPass">Confirmar Senha</label>
-            <input type="password" name="confiPass" id="confiPass" required>
+            <input type="password" name="confiPass" id="passtwo" required>
+            </form>
 
-            <input type="button" value="Enviar" class="btnsubmit">
+            <input type="submit" value="Enviar" class="btnsubmit">
         </div>
         </div>
 
